# 3d_machine_learning

./: .gitignore  README.md  pyproject.toml
notebooks/: point-cloud-processing-with-open3d-and-python.ipynb
src/: point_clouds_visualization.py  vertex_normal_estimation.py  voxel_downsampling.py
