[tool.poetry]
name = "3d-machine-learning"
version = "0.1.0"
description = ""
authors = ["Carlos Melo <carlos.fab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
sagemaker = "^2.203.1"
scikit-learn = "^1.4.0"
black = { version ="^23.12.1", extras = ["jupyter"] }
flake8 = "^7.0.0"
ipykernel = "^6.29.0"
pyvista = { version = "^0.43.2", extras = ["all"] }
panel = "^1.3.8"
trame = "^3.5.1"
ipywidgets = "^8.1.1"
jupyterlab = "^3.0"
vtk = "^9.3.0"
jupyter-contrib-nbextensions = "^0.7.0"
open3d = "^0.18.0"
addict = "^2.4.0"
pyarrow = "^6.0.0"  # Adjust the version number as necessary
isort = "^5.13.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
